import com.github.jengelman.gradle.plugins.shadow.transformers.DontIncludeResourceTransformer

plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "2.0.4"
}

group 'io.github.betterclient'
version '1.0'

repositories {
    mavenCentral()
    maven {url "https://repo.spongepowered.org/repository/maven-public/"}
}

configurations {
    shade
    implementation.extendsFrom(shade)
}

def asmVersion = "9.5"

dependencies {
    shade 'org.apache.logging.log4j:log4j-core:2.20.0'

    shade 'com.google.guava:guava:31.1-jre'
    shade 'com.google.code.gson:gson:2.10.1'

    shade 'org.spongepowered:mixin:0.8.5'

    shade "org.ow2.asm:asm:$asmVersion"
    shade "org.ow2.asm:asm-tree:$asmVersion"
    shade "org.ow2.asm:asm-util:$asmVersion"
    shade "org.ow2.asm:asm-commons:$asmVersion"
}

sourceCompatibility = targetCompatibility = 8

shadowJar {
    dependencies {

    }

    configurations = [project.configurations.shade]
    duplicatesStrategy DuplicatesStrategy.INCLUDE //prevent duplicates
    classifier "" //prevent creation of unshadowed jar
}